crates/shipper-storage/src/snapshots/shipper_storage__snapshot_tests__atomic_write_roundtrip_files.snap
---
source: crates/shipper-storage/src/lib.rs
expression: files
---
- events.jsonl
- receipt.json
- state.json
