crates/shipper-storage/src/snapshots/shipper_storage__snapshot_tests__atomic_write_roundtrip_state.snap
---
source: crates/shipper-storage/src/lib.rs
expression: state
---
- - state.json exists
  - true
- - receipt.json exists
  - true
- - events.jsonl exists
  - true
- - state.tmp absent
  - true
- - receipt.tmp absent
  - true
