crates/shipper-storage/src/snapshots/shipper_storage__snapshot_tests__build_backend_unimplemented_errors.snap
---
source: crates/shipper-storage/src/lib.rs
expression: errors
---
- - s3
  - "S3 storage is not yet implemented. Use file storage for now."
- - gcs
  - "GCS storage is not yet implemented. Use file storage for now."
- - azure
  - "Azure storage is not yet implemented. Use file storage for now."
