crates/shipper-storage/src/snapshots/shipper_storage__snapshot_tests__cloud_config_azure.snap
---
source: crates/shipper-storage/src/lib.rs
expression: config
---
storage_type: Azure
bucket: my-container
base_path: releases/v1
