crates/shipper-storage/src/snapshots/shipper_storage__snapshot_tests__cloud_config_default.snap
---
source: crates/shipper-storage/src/lib.rs
expression: "CloudStorageConfig::default()"
---
storage_type: File
bucket: ""
base_path: ""
