crates/shipper-storage/src/snapshots/shipper_storage__snapshot_tests__cloud_config_full_path_variants.snap
---
source: crates/shipper-storage/src/lib.rs
expression: results
---
- - prefix
  - state.json
  - prefix/state.json
- - "prefix/"
  - state.json
  - prefix/state.json
- - ""
  - state.json
  - state.json
- - a/b/c
  - d.json
  - a/b/c/d.json
