crates/shipper-storage/src/snapshots/shipper_storage__snapshot_tests__cloud_config_gcs.snap
---
source: crates/shipper-storage/src/lib.rs
expression: config
---
storage_type: Gcs
bucket: gcs-bucket
region: us-central1
base_path: ""
