crates/shipper-storage/src/snapshots/shipper_storage__snapshot_tests__cloud_config_minimal_file.snap
---
source: crates/shipper-storage/src/lib.rs
expression: config
---
storage_type: File
bucket: ""
base_path: .shipper
