crates/shipper-storage/src/snapshots/shipper_storage__snapshot_tests__cloud_config_validate_errors.snap
---
source: crates/shipper-storage/src/lib.rs
expression: cases
---
- - s3_empty_bucket
  - "bucket/container name is required for cloud storage"
- - gcs_empty_bucket
  - "bucket/container name is required for cloud storage"
- - azure_empty_bucket
  - "bucket/container name is required for cloud storage"
