crates/shipper-storage/src/snapshots/shipper_storage__snapshot_tests__file_state.snap
---
source: crates/shipper-storage/src/lib.rs
expression: state
---
- - src.txt
  - false
- - copied.txt
  - true
- - moved.txt
  - true
