crates/shipper-storage/src/snapshots/shipper_storage__snapshot_tests__file_storage_exists_snapshot.snap
---
source: crates/shipper-storage/src/lib.rs
expression: results
---
- - present.txt
  - true
- - absent.txt
  - false
